@@ -1,4 +1,7 @@
-Zabbix 1.8 was created in collaboration with NTT ComTechnology Corporation (Zabbix Premium Partner), whose support made possible implementation of some major features in this release. We would like to thank other companies and individuals for their active participation in development of Zabbix.
+Zabbix 1.8 was created in collaboration with NTT ComTechnology Corporation
+(Zabbix Premium Partner), whose support made possible implementation of some
+major features in this release. We would like to thank other companies and
+individuals for their active participation in development of Zabbix.
 
 We are truly grateful for your support, it really makes the difference!
 
