@@ -1,5 +1,6 @@
 Changes for 1.7.3
 
+ - [DEV-137] help link redirected to on-line documentation at www.zabbix.com/documentation/ (Alexei)
  - [ZBX-1329] fixed activating\deactivating host groups (Vedmak)
  - [ZBX-1383] fixed selection after mass operations, performance imrovements and links to host configuration in proxies screen (Vedmak)
  - [ZBX-1377] fixed adding template with linked template (Vedmak)
